# palworld-docker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  docker-compose.with-backups.yaml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: release.yaml
crates/pals/: Cargo.toml
crates/pals/resources/: DefaultPalWorldSettings.ini
crates/pals/src/: cli.rs  environment.rs  game_settings.rs  lifecycle.rs  main.rs  webhook.rs
crates/pals/src/lifecycle/: guard.rs
crates/pals/src/runtime/: docker.rs  mod.rs
crates/pals/src/utils/: extract_player_name.rs  mod.rs
crates/pals/tests/: cli_commands.rs
docs/: compose-with-backups.md  environment_variables.md
scripts/: config.py  entrypoint.sh  install.sh  utils.sh
scripts/templates/: config.ini.j2
