[package]
name = "pals"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/mbround18/palworld-docker"

[[bin]]
name = "palworld"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
gsm-instance = { git = "https://github.com/mbround18/game-server-management", rev = "2daf559", package = "gsm-instance" }
gsm-cron = { git = "https://github.com/mbround18/game-server-management", rev = "2daf559", package = "gsm-cron" }
gsm-shared = { git = "https://github.com/mbround18/game-server-management", rev = "2daf559", package = "gsm-shared" }
gsm-monitor = { git = "https://github.com/mbround18/game-server-management", rev = "2daf559", package = "gsm-monitor" }
gsm-notifications = { git = "https://github.com/mbround18/game-server-management", rev = "2daf559", package = "gsm-notifications" }
gsm-mod-manager = { git = "https://github.com/mbround18/game-server-management", rev = "2daf559", package = "gsm-mod-manager" }
env-parse = { git = "https://github.com/mbround18/game-server-management", rev = "2daf559", package = "env-parse" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
gsm-serde = { git = "https://github.com/mbround18/game-server-management", rev = "2daf559", package = "gsm-serde" }
ini-derive = { git = "https://github.com/mbround18/game-server-management", rev = "2daf559", package = "ini-derive" }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.52.4", features = ["rt", "rt-multi-thread", "macros"] }
regex = "1.13.0"
serde_plain = "1"
lazy_static = "1.5.0"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"

[lints]
workspace = true
